Add image to card in main branch and update HTML to use correct image URL and add drop dwon list on report views

--- a/duty/templates/duty/home.html
+++ b/duty/templates/duty/home.html
@@ -135,13 +135,13 @@
         <img src="https://et.ae/wp-content/uploads/2020/03/Logo.svg" alt="Logo">
         <h1>Welcome to OCC-EKG project</h1>
         <p>Manage and track driver details and trip information efficiently.</p>
-        <a href="{% url 'enter_head_count' %}" class="btn btn-light btn-lg">Get Started</a>
+
     </div>
 
     <div class="container">
         <div class="card-container">
             <div class="card">
-                <img class="card-img-top" src="D:\Sarun_App\OCC_Drivers_Headcount\staticfiles\Card_image_OCCSTM.jpg" alt="Card image OCCSTM">
+                <img class="card-img-top" src="https://raw.githubusercontent.com/Akshara-s22/OCC_Drivers_Headcount/Single-form-feature/staticfiles/Card_image_OCCSTM.jpg" alt="Card image OCCSTM">
                 <div class="card-body">
                     <h5 class="card-title">Driver Headcount</h5>
                     <p class="card-text">Add your trip and head count details.</p>
@@ -157,7 +157,7 @@
                 </div>
             </div>
         </div>
-    </div>duty/templates/report_data.html
+    </div>
 
     <footer class="footer">
         <p>&copy; Emirates Airline Staff Transport Project.</p>
